# booktui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: app.rs  library.rs  main.rs  player.rs  storage.rs  ui.rs
